--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Default to EBCDIC unless otherwise specified
+*/JCLBUILD/*     zos-working-tree-encoding=iso8859-1 git-encoding=iso8859-1
 *                zos-working-tree-encoding=ibm-1047 git-encoding=iso8859-1
 
 # The git attributes and ignore files MUST be ASCII
