--- a/DB2CHECK/pom.xml
+++ b/DB2CHECK/pom.xml
@@ -72,6 +72,11 @@ under the License.
 			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+		<dependency>
+            <groupId>com.ibm.db2</groupId>
+            <artifactId>db2jcc4</artifactId>
+            <version>4</version>
+        </dependency>
 	</dependencies>
 
 	<build>
