--- a/DB2CHECK/pom.xml
+++ b/DB2CHECK/pom.xml
@@ -74,11 +74,20 @@ under the License.
 		</dependency>
 		<dependency>
             <groupId>com.ibm</groupId>
-            <artifactId>db2jcc4</artifactId>
-            <version>4</version>
-        </dependency>
+                <artifactId>db2jcc_license_cu</artifactId>
+                    <version>4</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.ibm</groupId>
+                    <artifactId>db2jcc4</artifactId>
+                    <version>4</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.ibm</groupId>
+                    <artifactId>db2jcc_license_cisuz</artifactId>
+                    <version>4</version>
+                </dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
